grammar.js
    source_file: $ => seq(
      repeat($.terminated_statement),
      optional($._terminated_list),
    ),

    _statement: $ => choice(
      $.terminated_statement,
      $.list,
    ),

    terminated_statement: $ => choice(
      prec(2, seq(
        alias($._heredoc_list, $.list),
        $._terminator,
        $.heredoc_body,
      )),
      prec(1, seq(
        optional($._terminated_list),
        choice($._terminator, $.comment),
      )),
    ),

    _terminated_list: $ => prec(1, seq(
      $.list,
      optional($._job_terminator),
    )),

    list: $ => prec.left(PREC.list, seq(
      $.pipeline,
      repeat(seq($.list_operator, $.pipeline)),
    )),

    pipeline: $ => prec.left(PREC.pipeline, seq(
      optional($.bang),
      $._command,
      repeat(seq('|', optional('&'), repeat($._terminator), $._command)),
    )),

    _command: $ => choice(
      $.timed_command,
      $.if_statement,
      $.conditional_command,
      $.test_command,
      $.for_statement,
      $.while_statement,
      $.until_statement,
      $.case_statement,
      $.always_statement,
      $.select_statement,
      $.repeat_statement,
      $.foreach_statement,
      $.function_definition,
      $.arithmetic_command,
      $._redirected_command,
      $.subshell,
      $.block,
      $.coproc_statement,
      $.simple_command,
    ),

    simple_command: $ => prec.right(PREC.command, choice(
      seq(
        repeat(choice($.assignment, $.redirect)),
        repeat($.precommand),
        $.command_name,
        repeat(choice($.assignment, $._command_part, $.redirect)),
      ),
      seq(
        repeat1(choice($.assignment, $.redirect, $.precommand)),
      ),
    )),

    _heredoc_list: $ => prec.left(PREC.list, seq(
      alias($._heredoc_pipeline, $.pipeline),
      repeat(seq($.list_operator, $.pipeline)),
    )),

    command_name: $ => $._word,

    _command_part: $ => choice(
      $._word,
      alias($._command_assignment_word, $.word),
    ),

    assignment: $ => prec.right(PREC.command + 1, seq(
      field('name', alias($._assignment_name, $.variable_name)),
      optional(choice($.array_assignment, alias($._assignment_brace_value, $.word), alias(token.immediate(/[0-9]+/), $.word), $._word)),
    )),

    _assignment_brace_value: _ => token.immediate(prec(2, /\$\{[^}\n]+\}[^\s'"`$\\;|&<>(){}=>]*\$\{[^}\n]+\}\}?/)),

    array_assignment: $ => seq(
      token.immediate('('),
      repeat(choice($.array_element, $._word)),
      ')',
    ),

    _assignment_name: _ => token(prec(2, seq(
      PARAMETER_NAME,
      optional(seq('[', /[^\]\n]+/, ']')),
      choice('+=', ':=', '='),
    ))),

    redirect: $ => prec.right(choice(
      $._herestring_redirect,
      $._heredoc_redirect,
      seq(
        optional(choice(/[0-9]+/, $.brace_descriptor)),
        $.redirect_operator,
        optional(choice(alias(token.immediate(/[0-9]+/), $.word), $._word)),
      ),
    )),

    redirect_operator: _ => token(prec(2, choice(
      ...REDIRECT_OPERATORS.map(operator => seq(/[0-9]+/, operator)),
      ...REDIRECT_OPERATORS,
    ))),

    _herestring_redirect: $ => seq(
      optional(choice(/[0-9]+/, $.brace_descriptor)),
      alias($.herestring_operator, $.redirect_operator),
      choice(alias(token.immediate(/[0-9]+/), $.word), $._word),
    ),

    _heredoc_redirect: $ => choice(
      seq(
        optional(choice(/[0-9]+/, $.brace_descriptor)),
        alias($.heredoc_operator, $.redirect_operator),
        $.heredoc_start,
      ),
      seq(
        optional(choice(/[0-9]+/, $.brace_descriptor)),
        alias($._heredoc_strip_operator, $.redirect_operator),
        alias($._heredoc_strip_start, $.heredoc_start),
      ),
    ),

    heredoc_body: $ => seq(
      repeat($.heredoc_content),
      $.heredoc_end,
    ),

    if_statement: $ => choice(
      seq(
        'if',
        $._statement_body,
        'then',
        repeat($._statement),
        repeat($.elif_clause),
        optional($.else_clause),
        'fi',
      ),
      prec.right(1, seq(
        'if',
        $.list,
        $.block,
        repeat($.short_elif_clause),
        optional($.short_else_clause),
      )),
    ),

    elif_clause: $ => seq(
      'elif',
      $._statement_body,
      'then',
      repeat($._statement),
    ),

    else_clause: $ => seq(
      'else',
      repeat($._statement),
    ),

    short_elif_clause: $ => seq(
      'elif',
      $.list,
      $.block,
    ),

    short_else_clause: $ => seq(
      'else',
      $.block,
    ),

    for_statement: $ => choice(
      seq(
        'for',
        $.c_style_for_clause,
        $._do,
        repeat($._statement),
        'done',
      ),
      seq(
        'for',
        $._loop_word_list,
        $._do,
        repeat($._statement),
        'done',
      ),
      seq(
        'for',
        $._loop_word_list,
        optional($._terminator),
        $.block,
      ),
      seq(
        'for',
        $.c_style_for_clause,
        optional($._terminator),
        $.block,
      ),
    ),

    _loop_word_list: $ => seq(
      field('variable', $.variable_name),
      repeat(field('variable', $.variable_name)),
      optional(seq(
        choice('in', '('),
        repeat($._word),
        optional(')'),
      )),
    ),

    c_style_for_clause: $ => seq(
      '((',
      optional($.arithmetic_expression),
      ';',
      optional($.arithmetic_expression),
      ';',
      optional($.arithmetic_expression),
      '))',
    ),

    while_statement: $ => choice(
      seq(
        'while',
        $._statement_body,
        'do',
        repeat($._statement),
        'done',
      ),
      prec(1, seq(
        'while',
        $.list,
        $.block,
      )),
    ),

    until_statement: $ => choice(
      seq(
        'until',
        $._statement_body,
        'do',
        repeat($._statement),
        'done',
      ),
      prec(1, seq(
        'until',
        $.list,
        $.block,
      )),
    ),

    always_statement: $ => prec.right(PREC.command + 1, seq(
      alias($._always_block, $.block),
      'always',
      alias($._always_block, $.block),
    )),

    _always_block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    case_statement: $ => choice(
      prec(3, seq(
        'case',
        $._word,
        choice('in', '('),
        $.case_pattern,
        ')',
        $.list,
        $._case_terminator,
        'esac',
      )),
      seq(
        'case',
        $._word,
        choice('in', '('),
        repeat($._case_separator),
        optional(seq(
          $.case_item,
          repeat(seq(repeat($._case_separator), $.case_item)),
          repeat($._case_separator),
        )),
        'esac',
      ),
      seq(
        'case',
        $._word,
        '{',
        repeat(choice($.case_item, $._case_separator)),
        '}',
      ),
    ),

    _case_separator: $ => choice(
      $._terminator,
      alias($._case_comment, $.comment),
    ),

    _case_statement: $ => choice(
      seq($.list, alias($._case_comment, $.comment)),
      $.terminated_statement,
      $.list,
    ),

    case_item: $ => prec.right(2, seq(
      $._case_item_head,
      choice(
        $._case_terminator,
        seq(repeat1($._case_statement), $._case_terminator),
      ),
    )),

    _case_item_head: $ => seq(
      optional('('),
      $.case_pattern,
      ')',
    ),

    _case_terminator: _ => prec(2, choice(';;', ';&', ';|')),

    case_pattern: $ => seq(
      $.case_pattern_word,
      repeat(seq('|', $.case_pattern_word)),
    ),

    case_pattern_word: $ => seq(
      $._case_pattern_part_initial,
      repeat($._case_pattern_part),
    ),

    _case_pattern_part_initial: $ => choice(
      $.double_quoted_string,
      $.single_quoted_string,
      $.ansi_c_string,
      $.variable_expansion,
      $.parameter_expansion,
      $.arithmetic_expansion,
      $.command_substitution,
      $.escape_sequence,
      alias(/[^\s'"`$\\;|&<>(){}=]+/, $.word),
    ),

    _case_pattern_part: $ => choice(
      alias($._case_double_quoted_string, $.double_quoted_string),
      alias($._case_single_quoted_string, $.single_quoted_string),
      $.escape_sequence,
      alias(token.immediate(/[^\s'"`$\\;|&<>(){}=]+/), $.word),
    ),

    select_statement: $ => choice(
      seq(
        'select',
        field('variable', $.variable_name),
        optional(seq('in', repeat($._word))),
        $._do,
        repeat($._statement),
        'done',
      ),
      seq(
        'select',
        field('variable', $.variable_name),
        'in',
        repeat($._word),
        $._terminator,
        $.block,
      ),
      seq(
        'select',
        $._loop_word_list,
        $.block,
      ),
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    subshell: $ => seq(
      '(',
      repeat($._statement),
      ')',
    ),

    process_substitution: $ => seq(
      $._process_substitution_operator,
      repeat($._statement),
      ')',
    ),

    _process_substitution_operator: _ => token(prec(3, choice('<(', '>(', '=('))),

    arithmetic_command: $ => seq(
      '((',
      optional($.arithmetic_expression),
      '))',
    ),

    arithmetic_expansion: $ => choice(
      seq('$((', optional($.arithmetic_expression), '))'),
      seq('$((', alias($._nested_arithmetic_expression, $.arithmetic_expression), '))'),
      seq('$[', optional($._bracket_arithmetic_expression), ']'),
    ),

    arithmetic_expression: _ => token.immediate(/([^;)\n]|\)[^;)\n])+/),

    _nested_arithmetic_expression: _ => token.immediate(/[^;()\n]*\([^;()\n]*\)[^;)\n]*/),

    _bracket_arithmetic_expression: _ => token.immediate(/[^;\]\n]+/),

    conditional_command: $ => seq(
      '[[',
      optional($.conditional_expression),
      ']]',
    ),

    test_command: $ => seq(
      '[',
      optional($.conditional_expression),
      ']',
    ),

    conditional_expression: $ => prec.left(seq(
      $._conditional_term,
      repeat(seq($.conditional_operator, $._conditional_term)),
    )),

    _conditional_term: $ => choice(
      $.conditional_group,
      $.test_negated_expression,
      $.test_unary_expression,
      $.test_binary_expression,
      $._conditional_operand,
    ),

    test_unary_expression: $ => seq(
      $.test_operator,
      $._conditional_operand,
    ),

    test_negated_expression: $ => prec(1, seq(
      $.bang,
      $._conditional_term,
    )),

    test_binary_expression: $ => prec.left(seq(
      $._conditional_operand,
      $.test_operator,
      $._conditional_operand,
    )),

    test_operator: _ => token(prec(3, choice(
      '==',
      '!=',
      '=~',
      '<=',
      '>=',
      '-eq',
      '-ef',
      '-ne',
      '-lt',
      '-le',
      '-gt',
      '-ge',
      '-a',
      '-b',
      '-c',
      '-d',
      '-e',
      '-f',
      '-g',
      '-h',
      '-k',
      '-n',
      '-nt',
      '-o',
      '-ot',
      '-p',
      '-r',
      '-s',
      '-t',
      '-u',
      '-v',
      '-w',
      '-x',
      '-z',
      '-L',
      '-O',
      '-G',
      '-S',
      '=',
      '<',
      '>',
    ))),

    _conditional_operand: $ => choice(
      alias($._dollar_terminated_double_quoted_string, $.double_quoted_string),
      alias($.conditional_quoted_word, $.word),
      alias($.conditional_single_quoted_word, $.word),
      $.double_quoted_string,
      $.single_quoted_string,
      $.ansi_c_string,
      $.compound_word,
      alias(token(prec(4, '<->')), $.word),
      $.parameter_expansion,
      $.variable_expansion,
      $.command_substitution,
      $.arithmetic_expansion,
      alias($._conditional_subscript_word, $.word),
      alias($._conditional_glob_flag_word, $.word),
      alias($._conditional_extglob_word, $.word),
      alias($.conditional_word, $.word),
      $.glob_pattern,
    ),

    parameter_expansion: $ => choice(
      prec(2, seq(
        '${',
        $.parameter_flags,
        choice(
          $._parameter_shorthand_flag_operation,
          $._parameter_presence_operation,
          $._parameter_operation,
          $._parameter_default,
          $._parameter_body,
        ),
        '}',
      )),
      seq(
        '${',
        choice(
          $._parameter_shorthand_flag_operation,
          $._parameter_presence_operation,
          $._parameter_operation,
          $._parameter_body,
        ),
        '}',
      ),
    ),

    _parameter_body: $ => seq(
      repeat1(choice(
        $.variable_name,
        $.special_parameter,
        $.command_substitution,
      )),
      repeat($.parameter_subscript),
    ),

    _parameter_operation: $ => choice(
      seq(
        field('parameter', choice($.variable_name, $.special_parameter, $.parameter_expansion, $.command_substitution)),
        repeat($.parameter_subscript),
        repeat1(choice(
          $._parameter_default,
          $._parameter_removal,
          $.parameter_substitution,
          $.parameter_slice,
        )),
      ),
      seq(
        field('parameter', $.parameter_expansion),
        repeat1($.parameter_subscript),
      ),
    ),

    _parameter_presence_operation: $ => seq(
      alias($._parameter_presence_operator, $.parameter_operator),
      $._parameter_body,
    ),

    _parameter_shorthand_flag_operation: $ => seq(
      alias($._parameter_shorthand_flag_operator, $.parameter_operator),
      $._parameter_body,
    ),

    _parameter_default: $ => seq(
      $.parameter_operator,
      repeat($._parameter_part),
    ),

    parameter_operator: _ => token.immediate(choice('::=', ':^^', ':-', ':=', ':?', ':+', ':#', ':|', ':*', ':^', '-', '=', '?', '+')),

    parameter_subscript: _ => token.immediate(seq('[', /[^\]\n]+/, ']')),

    variable_expansion: $ => seq(
      '$',
      choice(
        alias($._identifier, $.variable_name),
        /[0-9#?@$!*_-]/,
      ),
    ),

    double_quoted_string: $ => seq(
      '"',
      repeat(choice(
        token.immediate(/[^"\\$`]+/),
        $.escape_sequence,
        $.variable_expansion,
        $.parameter_expansion,
        $.arithmetic_expansion,
        $.command_substitution,
        token.immediate('$'),
      )),
      '"',
    ),

    single_quoted_string: _ => seq(
      "'",
      repeat(token.immediate(/[^']+/)),
      "'",
    ),

    word: _ => /[^\s'"`$\\;|&<>(){}=>\x5b\x5d]+/,

    option_word: _ => token(prec(1, /--?[A-Za-z0-9][A-Za-z0-9._+/@%-]*[=:][A-Za-z0-9._+/@:%=-]*/)),

    special_parameter: _ => token.immediate(/[0-9#?@$!*_-]/),

    _word: $ => choice(
      $.glob_pattern,
      $.option_word,
      alias($._brace_word, $.word),
      alias(token(prec(1, /[0-9]+/)), $.word),
      $.escape_sequence,
      $.word,
      $.double_quoted_string,
      $.single_quoted_string,
      $.ansi_c_string,
      $.variable_expansion,
      $.parameter_expansion,
      $.arithmetic_expansion,
      $.command_substitution,
      $.process_substitution,
    ),

    compound_word: $ => prec.right(1, seq(
      choice($.variable_expansion, $.parameter_expansion),
      repeat1(choice(
        alias($._word_fragment, $.word),
        $.escape_sequence,
        $.variable_expansion,
        $.parameter_expansion,
        $.arithmetic_expansion,
        $.command_substitution,
      )),
    )),

    _word_fragment: _ => token.immediate(/[^\s'"`$\\;|&<>(){}=>]+/),

    variable_name: _ => token(PARAMETER_NAME),

    _identifier: _ => token(/[A-Za-z_][A-Za-z0-9_]*/),

    comment: _ => token(prec(1, seq('#', /.*/))),

    line_continuation: _ => token(seq('\\', /\r?\n/)),

    escape_sequence: _ => token(seq('\\', /./)),

    list_operator: _ => choice('&&', '||', '&'),

    bang: _ => token(prec(4, '!')),

    _statement_body: $ => repeat1($._statement),

    _do: $ => choice(
      'do',
      seq($._terminator, 'do'),
    ),

    _terminator: _ => choice(';', /\n+/),
  },
});
